--- a/pages/dsdm.html
+++ b/pages/dsdm.html
@@ -10,41 +10,32 @@
     <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
     
 </head>
     <body>
         <div id="cabecalho">
             <div id="cabecalho_I">
-                <img src="Imagens/logo.png" />
+                <img src="../Imagens/logo.png" />
                 <label>Sistemas de Informação</label>
                 <div id="menu">Menu
                     <div id="menu_options">
-                        <a id="home" href="index.html">Home</a>
-                        <a id="fdp" href="pages/fdp.html">Feature Driven Development</a>
-                        <a id="xg" href="pages/xg.html">Extreme Programming</a>
-                        <a id="msf" href="pages/msf.html">Microsoft Solutions Framework</a>
-                        <a id="dsdm" href="pages/dsdm.html">Dynamic System Development Model</a>
-                        <a id="scrum" href="pages/scrum.html">SCRUM</a>
+                        <a id="home" href="../index.html">Home</a>
+                        <a id="fdp" href="fdp.html">Feature Driven Development</a>
+                        <a id="xg" href="xg.html">Extreme Programming</a>
+                        <a id="msf" href="msf.html">Microsoft Solutions Framework</a>
+                        <a id="dsdm" href="dsdm.html">Dynamic System Development Model</a>
+                        <a id="scrum" href="scrum.html">SCRUM</a>
                     </div>
                 </div>
             </div>
         </div>
-        <div id="page-home">
-            <img src="Imagens/agil.jpg" />
-            <label id="titulo">Desenvolvimento Ágil de Software</label>
-            <div id="alunos">
-                <label>Alunos:</label>
-                <label>Andersson Barros Bezerra</label>
-                <label>Antônio Francisco Teles Leandro</label>
-                <label>Darcisio Vicente da Cunha Júnior</label>
-                <label>Matheus Linnyker da Silva Paula</label>
-                <label>Wanderson Carlos</label>
-            </div>            
+        <div id="page-scrum">
+            <label id="titulo">Dynamic System Development Model</label>         
         </div>
         <div id="rodape">
             <div id="rodape_I">
-                <a href="http://www.faculdadedelta.edu.br/"><img src="Imagens/logoDelta.png"></a>
+                <a href="http://www.faculdadedelta.edu.br/"><img src="../Imagens/logoDelta.png" /></a>
                 <div id="dados">
                     <label>&copy Copyright 2019 - Trabalho Acadêmico</label>
                     <label>Professor: Andre Luiz Gonçalves Campos</label>
@@ -52,8 +43,8 @@
             </div>
         </div>         
     </body>
-     <script src="js/functions.js"></script>
+     <script src="../js/functions.js"></script>
     <script>
-        $("#home").css({"color":"#FF4500"})
+        $("#dsdm").css({"color":"#FF4500"})
     </script>
 </html>
