--- a/pages/dsdm.html
+++ b/pages/dsdm.html
@@ -21,27 +21,67 @@
                 <div id="menu">Menu
                     <div id="menu_options">
                         <a id="home" href="../index.html">Home</a>
-                        <a id="fdp" href="fdp.html">Feature Driven Development</a>
+                        <a id="fdp" href="fdd.html">Feature Driven Development</a>
                         <a id="xg" href="xg.html">Extreme Programming</a>
                         <a id="msf" href="msf.html">Microsoft Solutions Framework</a>
-                        <a id="dsdm" href="dsdm.html">Dynamic System Development Model</a>
+                        <a id="dsdm" href="dsdm.html">Dynamic Systems Development Method</a>
                         <a id="scrum" href="scrum.html">SCRUM</a>
                     </div>
                 </div>
             </div>
         </div>
-        <div id="page-scrum">
-            <label id="titulo">Dynamic System Development Model</label>         
-        </div>
-        <div id="rodape">
-            <div id="rodape_I">
-                <a href="http://www.faculdadedelta.edu.br/"><img src="../Imagens/logoDelta.png" /></a>
-                <div id="dados">
-                    <label>&copy Copyright 2019 - Trabalho Acadêmico</label>
-                    <label>Professor: Andre Luiz Gonçalves Campos</label>
+        <div id="page-dsdm">
+            <label id="titulo">Dynamic Systems Development Method</label>
+            <p>É uma estrutura ágil, que trata todo o ciclo de vida de um projeto, até os impactos que as empresas terão em sua implantação. Tendo como objetivo o alinhamento de todo o projeto, para uma resposta imediata e consistente para o negócio. A estrutura é baseada em quatro princípios: estudo de viabilidade e negócios, iteração de modelo e protótipo funcional, iteração de design e construção e implementação.</p>
+            <img id="imgdsdm" src="../Imagens/dsdm.jpg" />
+            <h1>Historia</h1>
+            <p>Surgiu em 1994 por uma associação de empresários e especialista formados na área de engenharia de softwares, com o objetivo de desenvolver e promover um desenvolvimento rápido de aplicações, criando ferramentas e combinando as melhores experiências de empresas como British Airways, American Express, Oracle entre outras.</p>
+            <p>Em 2006, Dynamic Systems development method teve a versão 4.2 publicada, para os usuários visualizar e utilizar.</p>
+            <p>Em 2014, o Dynamic Systems development method teve o seu manual publicado.</p>
+            <p>Em 2016, foi batizado como O Agile Business Consortium organização sem fins lucrativos</p>
+            <h1>Princípios</h1>
+            <p>O DSDM tem oito princípios, com a finalidade de conceituar a equipe e preparar mentalmente para que consigam entregar o que se é pedido de forma consistente, os princípios são eles:</p>
+            <p>1º.   Concentre-se na necessidade de negócio.</p>
+            <p>2º.   Entregar a tempo</p>
+            <p>3º.   Colaborar.</p>
+            <p>4º.   Comprometer a qualidade nunca.</p>
+            <p>5º.   Construir gradualmente a partir de bases sólidas.</p>
+            <p>6º.   Desenvolver de forma iterativa.</p>
+            <p>7º.   Comunicar de forma contínua e claramente.</p>
+            <p>8º.   Demonstrar controle.</p>
+            <h1>Técnicas fundamentais</h1>
+            <p>•    Timeboxing: O projeto e divido, cada parte da divisão tem seu orçamento e sua data de entrega.</p>
+            <p>•    MoSCoW: Prioriza alguns itens do projeto ou exigências.</p>
+            <p>•    Prototipagem: Criação de protótipos do sistema em desenvolvimento, que permite a descobertas de falhas e possíveis erros que pode ser corrigidos para versões futuras.</p>
+            <p>•    Teste: Garante a qualidade e funcionalidade do sistema desenvolvido.</p>
+            <p>•    Workshop: Reuni os atores do projeto para discutir requisitos, funcionalidades e compreensão mútua.</p>
+            <p>•    Modelagem: Ajuda a visualizar um domínio de negócios e melhorar a compreensão. Produz uma representação esquemática de aspectos específicos do sistema ou área de negócio o que está sendo desenvolvido.</p>
+            <p>•    Gerenciamento de configuração: No desenvolvimento de múltiplos sistemas ao mesmo, todos os prazos tem que ser mantido sendo entregues de forma incremental no final de cada tempo-box, todos os processos precisam ser bem gerida para a sua conclusão</p>
+            <h1>Pontos Positivos</h1>
+            <p>Agilidade na entrega dos produtos</p>
+            <p>Os desenvolvedores têm acesso fácil aos usuários</p>
+            <p>Todos os projetos são desenvolvidos no prazo e confiáveis.</p>
+            <h1>Pontos Negativos</h1>
+            <p>Mudanças dramáticas na cultura da empresa</p>
+            <p>Necessários recursos financeiros para implementas</p>
+            <p>Não é ideal para pequenas empresas</p>
+            <h2 style="text-align: center">Pergunta</h2>
+            <p style="text-align: center">Qual o objetivo de um DSDM em uma empresa?</p>
+            <h2 style="text-align: center" >Referências Bibliográficas</h2>   
+            <a style="text-align: center" href="https://www.productplan.com/glossary/dynamic-systems-development-method/"><label>www.productplan.com</label></a>
+            <a style="text-align: center" href="https://www.academia.edu/36405392/Metodologias_%C3%81geis_Engenharia_de_Software_sob_Medida"><label>Metodologias Ágeis Engenharia de Software sob Medida</label></a>
+
+            <div id="rodape" style="top: 100%">
+                <div id="rodape_I" >
+                    <a href="http://www.faculdadedelta.edu.br/"><img src="../Imagens/logoDelta.png" /></a>
+                    <div id="dados">
+                        <label>&copy Copyright 2019 - Trabalho Acadêmico</label>
+                        <label>Professor: Andre Luiz Gonçalves Campos</label>
+                    </div>
                 </div>
-            </div>
-        </div>         
+            </div>         
+        </div>
+        
     </body>
      <script src="../js/functions.js"></script>
     <script>
