--- a/pages/msf.html
+++ b/pages/msf.html
@@ -21,7 +21,7 @@
                 <div id="menu">Menu
                     <div id="menu_options">
                         <a id="home" href="../index.html">Home</a>
-                        <a id="fdp" href="fdp.html">Feature Driven Development</a>
+                        <a id="fdp" href="fdd.html">Feature Driven Development</a>
                         <a id="xg" href="xg.html">Extreme Programming</a>
                         <a id="msf" href="msf.html">Microsoft Solutions Framework</a>
                         <a id="dsdm" href="dsdm.html">Dynamic System Development Model</a>
