--- a/pages/dsdm.html
+++ b/pages/dsdm.html
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div id="page-dsdm">
-            <label id="titulo">Dynamic Systems Development Method</label>
+            <label id="titulo" style="top:20px">Dynamic Systems Development Method</label>
             <p>É uma estrutura ágil, que trata todo o ciclo de vida de um projeto, até os impactos que as empresas terão em sua implantação. Tendo como objetivo o alinhamento de todo o projeto, para uma resposta imediata e consistente para o negócio. A estrutura é baseada em quatro princípios: estudo de viabilidade e negócios, iteração de modelo e protótipo funcional, iteração de design e construção e implementação.</p>
             <img id="imgdsdm" src="../Imagens/dsdm.jpg" />
             <h1>Historia</h1>
