--- a/pages/fdd.html
+++ b/pages/fdd.html
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div id="page-fdd">
-            <label id="titulo">Feature Driven Development</label> 
+            <label id="titulo" style="top: -5px;">Feature Driven Development</label> 
             <p>Entre as metodologias ágeis que existiam antes do manifesto ágil, o FDD “Feature Driven Development” é uma delas. Concebido originalmente por Jeff de Luca, o FDD surgiu em Singapura, entre os anos de 1997 e 1999 com base no método Coad (Criado por Peter Coad – 1980/1990) e nos processos interativos e lean já utilizados por Jeff de Luca.</p>     
             <p>O FDD busca o desenvolvimento por funcionalidade, ou seja, por um requisito funcional do sistema. É prático para o trabalho com projetos iniciais ou projetos com codificações existentes. Apesar de ter algumas diferenças entre o FDD e o XP, é possível utilizar as melhores práticas de cada metodologia. O FDD atua muito bem em conjunto com o Scrum, pois o Scrum atua no foco do gerenciamento do projeto e o FDD atua no processo de desenvolvimento.</p> 
             <p>O FDD possui cinco processos básicos.</p> 
