--- a/pages/scrum.html
+++ b/pages/scrum.html
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div id="page-scrum">
-            <label id="titulo">SCRUM</label>  
+            <label id="titulo" style="top: -5px;">SCRUM</label>  
             <p>Sendo considerado como o passo inicial para a implantação de uma cultura ágil
 nas empresas que desenvolvem software. O Scrum é o framework mais
 utilizado no mundo, criado por Ken Schwaber e Jeff Sutherland, dois veteranos
