--- a/pages/xg.html
+++ b/pages/xg.html
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div id="page-scrum">
-            <label id="titulo">Extreme Programming</label>         
+            <label id="titulo" style="top: -5px;">Extreme Programming</label>         
         </div>
         <div id="rodape">
             <div id="rodape_I">
