--- a/pages/msf.html
+++ b/pages/msf.html
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div id="page-scrum">
-            <label id="titulo">Microsoft Solutions Framework</label>         
+            <label id="titulo" style="top: -5px;">Microsoft Solutions Framework</label>         
         </div>
         <div id="rodape">
             <div id="rodape_I">
