--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div id="menu">Menu
                     <div id="menu_options">
                         <a id="home" href="index.html">Home</a>
-                        <a id="fdp" href="pages/fdp.html">Feature Driven Development</a>
+                        <a id="fdp" href="pages/fdd.html">Feature Driven Development</a>
                         <a id="xg" href="pages/xg.html">Extreme Programming</a>
                         <a id="msf" href="pages/msf.html">Microsoft Solutions Framework</a>
                         <a id="dsdm" href="pages/dsdm.html">Dynamic System Development Model</a>
