--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <label>Antônio Francisco Teles Leandro</label>
                 <label>Darcisio Vicente da Cunha Júnior</label>
                 <label>Matheus Linnyker da Silva Paula</label>
-                <label>Wanderson Carlos</label>
+                <label>Wanderson Carlos da Silva</label>
             </div>            
         </div>
         <div id="rodape">
