--- a/pages/xg.html
+++ b/pages/xg.html
@@ -30,18 +30,92 @@
                 </div>
             </div>
         </div>
-        <div id="page-scrum">
-            <label id="titulo" style="top: -5px;">Extreme Programming</label>         
-        </div>
-        <div id="rodape">
-            <div id="rodape_I">
-                <a href="http://www.faculdadedelta.edu.br/"><img src="../Imagens/logoDelta.png" /></a>
-                <div id="dados">
-                    <label>&copy Copyright 2019 - Trabalho Acadêmico</label>
-                    <label>Professor: Andre Luiz Gonçalves Campos</label>
+        <div id="page-xg">
+            <label id="titulo" style="top: -5px;">Extreme Programming</label>  
+            <p>Foi criada em 1997</p>
+            <p>O EX é um método de desenvolvimento de software, leve, não é prescritivo ( não te obriga fazer nada, apenas te da instruções), e procura fundamentar suas praticas por um conjunto de valores, e um detalhe importante é que pode ser adotada por todos desenvolvedores, não sendo somente algo restrito para os experientes.</p>
+            <h1>Objetivo</h1>
+            <p>Levar ao extremo um conjunto de práticas que são ditas como boas na Engenharia de Software.</p>
+            <h1>O que o EX diz?</h1>
+            <p>- Já que testar é bom, que todos testem o tempo todo;</p>
+            <p>- Já que revisão é bom que se revise o tempo todo;</p>
+            <p>- Se projetar é bom, então refatorar o tempo todo;</p> 
+            <p>- Se teste de integração é bom, então que se interage o tempo todo;</p>
+            <p>- Se simplicidade é bom, desenvolva uma solução que não apenas só funcione, mas que seja o mais simples  possível.</p> 
+            <h1>Valores e Princípios</h1>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Valores</th>
+                        <th>Princípios</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Comunicação</td>
+                        <td>Feedback Rápido</td>
+                    </tr>
+                    <tr>
+                        <td>Simplicidade</td>
+                        <td>Presumir simplicidade</td>
+                    </tr>
+                    <tr>
+                        <td>Feedback</td>
+                        <td>Mudanças incrementais</td>
+                    </tr>
+                    <tr>
+                        <td>Coragem</td>
+                        <td>Abraças mudanças</td>
+                    </tr>
+                    <tr>
+                        <td>Respeito</td>
+                        <td>Trabalho de alta qualidade</td>
+                    </tr>
+                </tbody>
+            </table>
+            <h1>Práticas</h1>
+            <p>- Jogo de Planejamento (Planning Game)</p>
+            <p>Desenvolvimento é feito em interações semanais (No inicio da semana o Desenvolvedor e o Cliente se reúnem, para priorizar as funcionalidades.)</p>
+            <p>- Fases Pequenas (Small Releases)</p> 
+            <p>Liberação de  pequenas versões funcionais do projeto auxilia muito no processo de aceitação por parte do cliente e já pode testar parte do sistema que está comprando (ao invés do cliente esperar todo projeto ser entregue, ele vai testando parte por parte). As versões são menores que as produzidas em outras metodologias incrementais como RUP.</p>
+            <p>-  Metáfora (Metaphor)</p>
+            <p>Procura facilitar a comunicação com o cliente, entendendo qual a realidade dele, precisando traduzir as palavras do cliente para o significado que ele espera dentro do projeto.</p>
+            <p>- Design Simples (Simple Design)</p> 
+            <p>Se encaixa no princípio de simplicidade, um projeto simples significa que caso o cliente pedir que na primeira versão apenas o usuário teste possa entrar no sistema com a senha que ele escolher, e assim ter acesso a todo sistema, o programador fará exatamente o que foi pedido sem se preocupar com sistemas, autenticações e restrições de acesso complexos.</p>
+            <p>- Teste de Aceitação (Customer Tests)</p>
+            <p>Testes construídos pelos clientes e conjuntos de analistas e testadores, para aceitar um determinado requisito.</p> 
+            <p>- Semana de 40 horas (Sustainable Pace)</p> 
+            <p>Trabalhar com qualidade, buscando ter ritmo de trabalho saudável, (8 horas por dia, 40 horas por semana sem horas extras).</p>
+            <p>- Propriedade Coletiva (Collective Ownership)</p>
+            <p>O código fonte não tem dono e ninguém precisa solicitar permissão para poder modificar o mesmo.</p> 
+            <p>- Programação Pareada (Pair Programming) </p>
+            <p>Programação em par dupla de um único computador.</p>
+            <p>- Padronização do Código (Coding Standards)</p>
+            <p>A equipe de desenvolvimento precisa estabelecer regras para programar e todos devem seguir as regras, dando a impressão que todo código foi redigido por uma única pessoa.</p>
+            <p>- Desenvolvimento Orientado a Testes – TDD (Test Driven Develpment)</p>
+            <p>Crie primeiro os testes unitários e depois crie o código para que os testes funcionem. Os testes unitários são fundamentais para que a qualidade do projeto seja mantida.</p>
+            <p>- Refatoração (Refactoring)</p>
+            <p>É um processo que permite a melhoria contínua da programação, ou mínimo de introdução de erro, mantendo a compatibilidade com o código já existente. Refatorar melhora a clareza (leitura do código), divide em módulos mais coesos e de maior reaproveitamento evitando duplicação do código fonte.</p>
+            <p>- Integração Contínua (Continuous Integration)</p>
+            <p>Sempre que for produzida uma nova funcionalidade, nunca se deve esperar uma semana para integrar a versão atual do sistema.</p>             
+            <h2 style="text-align: center">Pergunta</h2>
+            <p style="text-align: center"></p>
+            <h2 style="text-align: center" >Referências Bibliográficas</h2>   
+            <a style="text-align: center" href=""><label></label></a>
+
+
+            <div id="rodape" style="top: 100%">
+                <div id="rodape_I">
+                    <a href="http://www.faculdadedelta.edu.br/"><img src="../Imagens/logoDelta.png" /></a>
+                    <div id="dados">
+                        <label>&copy Copyright 2019 - Trabalho Acadêmico</label>
+                        <label>Professor: Andre Luiz Gonçalves Campos</label>
+                    </div>
                 </div>
-            </div>
-        </div>         
+            </div>  
+
+        </div>
+       
     </body>
      <script src="../js/functions.js"></script>
     <script>
