--- a/pages/fdd.html
+++ b/pages/fdd.html
@@ -73,7 +73,7 @@
             <p>É possível notar como o FDD pode atuar em conjunto com outras metodologias, principalmente com o Scrum, encaixando-se perfeitamente como metodologia de engenharia ágil de software com projeto ágil de software.</p> 
             <p>Além disso, é possível notar que as boas práticas do FDD podem entrar em embate com o XP, na forma em que o código é tratado por cada uma das metodologias. Lembrando que as metodologias possuem características que podem ser adaptadas à necessidade de cada empresa, se notarmos o foco principal em todas as metodologias, temos o desenvolvimento por incremento, a comunicação constante com o cliente e a integração contínua.</p> 
             <h2 style="text-align: center">Pergunta</h2>
-            <p style="text-align: center"></p>
+            <p style="text-align: center">É correto afirmar que o FDD é comunitario?</p>
             <h2 style="text-align: center" >Referências Bibliográficas</h2>   
             <a style="text-align: center" href="http://www.devmedia.com.br/uma-visao-geral-sobre-metodologia-agil/27944"><label>www.devmedia.com.br</label></a>
             <a style="text-align: center" href="http://www.featuredrivendevelopment.com"><label>www.featuredrivendevelopment.com</label></a>
