--- a/pages/xg.html
+++ b/pages/xg.html
@@ -99,9 +99,9 @@
             <p>- Integração Contínua (Continuous Integration)</p>
             <p>Sempre que for produzida uma nova funcionalidade, nunca se deve esperar uma semana para integrar a versão atual do sistema.</p>             
             <h2 style="text-align: center">Pergunta</h2>
-            <p style="text-align: center"></p>
+            <p style="text-align: center">Sobre o EX é correto afirmar que ele trabalha com complexidade, e pesado?</p>
             <h2 style="text-align: center" >Referências Bibliográficas</h2>   
-            <a style="text-align: center" href=""><label></label></a>
+            <a style="text-align: center" href="https://youtu.be/ALvpFMcL-dI"><label>https://youtu.be/ALvpFMcL-dI</label></a>
 
 
             <div id="rodape" style="top: 100%">
