--- a/pages/msf.html
+++ b/pages/msf.html
@@ -63,6 +63,7 @@
     <script>
         $("#msf").css({"color":"#FF4500"})
         function teste(){
+            $(window).css({"height": "100%"})
             $("#imgMsf").css({"top": "calc(50% - " + ($("#imgMsf").css('height').replace("px", "")) / 2 + "px)"})
         }
         teste()
